# SciOly2023

./: .gitignore  CMakeLists.txt  README.md  load.sh  main.cpp  subdivision.ipynb  test.py  todo.txt  tracks.txt
pathing_tests/: CMakeLists.txt  debug.h  main.cpp  sim_hardware.h
pathing_tests/old/: Makefile  pathing_tests.cpp
src/: constants.h  controller.h  hardware.h  main.cpp  maze_parser.h  maze_solving.h  pathing.h  pindefs.h  subsystems.h  utils.h
